--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
         </li>
         <% end %>
       </ul>
-      <div class="col-sm-3 col-md-3">
+      <div class="col-sm-4 col-xs-4 col-md-4">
         <%= form_tag messages_path, class: "navbar-form", :method => 'get' do %>
             <div class="form-group">
               <%= text_field_tag :search, params[:search],  class: "form-control input-sm" %>
